Dynamic objects have periodic glitch in velocity when on an incline #35076

Closed
opened 2013-04-25 15:02:27 +02:00 by Alex Fraser · 6 comments
Member

Category: Physics

%%%When a dynamic object is resting on a non-axis-aligned plane, it pulses up and down and slides down the plane - even if it has high friction. If the object is allowed to sleep then the behaviour stops, but this is not always an option (in my game for example the character is always being updated so it can climb walls).

dynamics_glitch.blend shows the issue. A cube rests on a single inclined triangle, but it pulses and slides down. However, it should be still. The gravity is set quite high (75) to make the problem obvious, but it still happens when the gravity is normal (9.8).

See LinearVelocityGraph.png for an illustration of the problem. It seems that a numerical error causes the z component to become large and negative; on the following frame it becomes positive, perhaps due to the collision response. Then it approaches zero over 50 frames or so, and the cycle repeats. The demo .blend prints out a similar graph to the console.%%%

**Category**: Physics %%%When a dynamic object is resting on a non-axis-aligned plane, it pulses up and down and slides down the plane - even if it has high friction. If the object is allowed to sleep then the behaviour stops, but this is not always an option (in my game for example the character is always being updated so it can climb walls). dynamics_glitch.blend shows the issue. A cube rests on a single inclined triangle, but it pulses and slides down. However, it should be still. The gravity is set quite high (75) to make the problem obvious, but it still happens when the gravity is normal (9.8). See LinearVelocityGraph.png for an illustration of the problem. It seems that a numerical error causes the z component to become large and negative; on the following frame it becomes positive, perhaps due to the collision response. Then it approaches zero over 50 frames or so, and the cycle repeats. The demo .blend prints out a similar graph to the console.%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Thanks for the report, fixed in svn r56302.%%%

%%%Thanks for the report, fixed in svn r56302.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

%%%Wow, that was fast! It has certainly fixed the bumping issue; my character is now rock solid in my game. Thanks!

Did you see that the friction is still not applied correctly? No matter how high the friction is set in the material, the cube slides slowly down the plane.%%%

%%%Wow, that was fast! It has certainly fixed the bumping issue; my character is now rock solid in my game. Thanks! Did you see that the friction is still not applied correctly? No matter how high the friction is set in the material, the cube slides slowly down the plane.%%%

%%%Right, yes I noticed that.
The way bullet handles friction has changed, so that's a side effect of that.
If it's a real problem we could try to tweak some values to avoid it. Not sure it's a bug though.%%%

%%%Right, yes I noticed that. The way bullet handles friction has changed, so that's a side effect of that. If it's a real problem we could try to tweak some values to avoid it. Not sure it's a bug though.%%%
Author
Member

%%%OK, no problem. I have a simple workaround for it in my game. Thanks again for the fix :)%%%

%%%OK, no problem. I have a simple workaround for it in my game. Thanks again for the fix :)%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35076
No description provided.